<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button6"
        android:layout_width="319dp"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="460dp"
        android:onClick="OpenCompleteTask"
        android:text="@string/Button_CompletedTasks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="162dp"
        android:layout_height="52dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="276dp"
        android:onClick="StartEditProfile"
        android:text="@string/Button_EditAndSaveProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText6"
        android:layout_width="126dp"
        android:layout_height="49dp"
        android:layout_marginStart="236dp"
        android:layout_marginTop="132dp"
        android:ems="10"
        android:enabled="false"
        android:focusable="false"
        android:inputType="text"
        android:text="@string/ProfileName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText8"
        android:layout_width="126dp"
        android:layout_height="49dp"
        android:layout_marginStart="236dp"
        android:layout_marginTop="180dp"
        android:ems="10"
        android:enabled="false"
        android:focusable="false"
        android:inputType="text"
        android:text="@string/ProfileOrganization"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="126dp"
        android:layout_height="49dp"
        android:layout_marginStart="236dp"
        android:layout_marginTop="84dp"
        android:ems="10"
        android:enabled="false"
        android:focusable="false"
        android:inputType="text"
        android:text="@string/ProfileSurname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="319dp"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="364dp"
        android:onClick="OpenEmployeesActivity"
        android:text="@string/Button_Employees"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="319dp"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="508dp"
        android:onClick="OpenCurrentActivity"
        android:text="@string/Button_CurrentTasks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="182dp"
        android:layout_height="190dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="84dp"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/among_us" />

    <EditText
        android:id="@+id/editTextText9"
        android:layout_width="126dp"
        android:layout_height="49dp"
        android:layout_marginStart="236dp"
        android:layout_marginTop="228dp"
        android:ems="10"
        android:enabled="false"
        android:focusable="false"
        android:inputType="text"
        android:text="@string/ProfilePost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="319dp"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="412dp"
        android:onClick="OpenAssignedTasksActivity"
        android:text="@string/Button_AssignedTasks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="319dp"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="652dp"
        android:backgroundTint="#E80B0B"
        android:onClick="ExitInAccount"

        android:text="@string/Button_Exit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="16dp"
        android:text="Профиль"
        android:textSize="100px"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>