<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="236dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/Text_Sing_Login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="436dp"
        android:onClick="SingInAccount"
        android:text="@string/Button_SingIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="376dp"
        android:text="@string/CheckBox_Registration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="316dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/Text_Sing_Password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="192dp"
        android:text="@string/Text_SingIn"
        android:textSize="70px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>